--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,76 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
+/* TREND BOXES */
+.Trend-01  {
+	border: none;
+padding: 0.6em 1.2em;
+color: #fff;
+font-family: 'Lato', Calibri, Arial, sans-serif;
+font-size: 1em;
+letter-spacing: 1px;
+text-transform: uppercase;
+cursor: pointer;
+display: inline-block;
+margin: 3px 2px;
+border-radius: 2px;
+background-color: #6f848a;
+margin-left:50px
+}
+
+.Trend-02 {
+	border: none;
+padding: 0.6em 1.2em;
+color: #fff;
+font-family: 'Lato', Calibri, Arial, sans-serif;
+font-size: 1em;
+letter-spacing: 1px;
+text-transform: uppercase;
+cursor: pointer;
+display: inline-block;
+margin: 3px 2px;
+border-radius: 2px;
+background-color: #77a9b7;
+
+}
+
+
+.Trend-03 {
+	border: none;
+padding: 0.6em 1.2em;
+color: #fff;
+font-family: 'Lato', Calibri, Arial, sans-serif;
+font-size: 1em;
+letter-spacing: 1px;
+text-transform: uppercase;
+cursor: pointer;
+display: inline-block;
+margin: 3px 2px;
+border-radius: 2px;
+background-color: #1e9abd;
+}
+
+/* /////////////END TRENDS /////////// */
+
+/*ul.
+{
+list-style-type: none;
+padding: 0px;
+margin: 0px;
+}
+
+.li
+{
+background-image: url(../images/list.png);
+background-repeat: no-repeat;
+line-height 
+height: 46px;
+padding-left: 40px;
+ 
+}
+*/
+
+
 .logo {
 	text-align: center;
 }
@@ -669,4 +739,150 @@ input:focus{
 
 /* ---- //// END CONTENT STYLES ////---- */
 
+
+
+/* ---- //// BEGIN LOADING SPINNER STYLES ////---- */
+
+/* Start by setting display:none to make this hidden.
+   Then we position it in relation to the viewport window
+   with position:fixed. Width, height, top and left speak
+   speak for themselves. Background we set to 80% white with
+   our animation centered, and no-repeating */
+.modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('http://i.stack.imgur.com/FhHRx.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading {
+    overflow: hidden;   
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .modal {
+    display: block;
+}
+
+/* ---- //// END LOADING SPINNER STYLES ////---- */
+
+/* ---- //// START MODAL DIALOGS ////---- */
+
+
+.md-perspective, .md-perspective body {
+    height: 100%;
+    overflow: hidden;
+}
+.md-perspective body {
+    background: none repeat scroll 0 0 #222222;
+    perspective: 600px;
+}
+.container {
+    background-color: #FBFBFB;
+    min-height: 100%;
+}
+
+.md-modal {
+    backface-visibility: hidden;
+    height: auto;
+    left: 50%;
+    max-width: 630px;
+    min-width: 320px;
+    overflow-y: auto;
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);;
+    visibility: hidden;
+    width: 50%;
+    z-index: 2000; 
+	
+	
+	
+	
+}
+.md-show {
+    visibility: visible;
+}
+.md-overlay {
+    background: none repeat scroll 0 0 rgba(29, 154, 189, 0.8);
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    transition: all 0.3s ease 0s;
+    visibility: hidden;
+    width: 100%;
+    z-index: 1000;
+}
+.md-show ~ .md-overlay {
+    opacity: 1;
+    visibility: visible;
+}
+.md-content {
+    background: none repeat scroll 0 0 #0D4757;
+    border-radius: 3px 3px 3px 3px;
+    color: #FFFFFF;
+    margin: 0 auto;
+    position: relative;
+}
+.md-content h3 {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
+    border-radius: 3px 3px 0 0;
+    font-size: 2.4em;
+    font-weight: 300;
+    margin: 0;
+    opacity: 0.8;
+    padding: 0.4em;
+    text-align: center;
+}
+.md-content > div {
+    font-size: 1.15em;
+    font-weight: 300;
+    margin: 0;
+    padding: 15px 40px 30px;
+}
+.md-content > div p {
+    margin: 0;
+    padding: 10px 0;
+}
+.md-content > div ul {
+    margin: 0;
+    padding: 0 0 30px 20px;
+}
+.md-content > div ul li {
+    padding: 5px 0;
+}
+.md-content button {
+    display: block;
+    font-size: 0.8em;
+    margin: 0 auto;
+}
+.md-effect-8.md-modal {
+    perspective: 1300px;
+}
+.md-effect-8 .md-content {
+    opacity: 0;
+    transform: rotateY(-70deg);
+    transform-style: preserve-3d;
+    transition: all 0.3s ease 0s;
+}
+.md-show.md-effect-8 .md-content {
+    opacity: 1;
+    transform: rotateY(0deg);
+}
+@media screen and (max-width: 32em) {
+body {
+    font-size: 75%;
+}
 
