--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ header #header-left .menu-icon {
 }
 
 header #header-left .menu-icon button {
-	background: url("../images/menu-icon.png") no-repeat center;
+	background: url("http://digitalinc.ie/screen2/images/menu-icon.png") no-repeat center;
 	border: none;
 	width: 100%;
 	height: 100%;
