Chart height updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -722,7 +722,7 @@ input:focus{
 .content .chart-container {
 	margin: 60px auto;
 	width: 700px;
-	height: 450px !important;
+	/*height: 450px !important;*/
 	
 }
 
