--- a/css/styles.css
+++ b/css/styles.css
@@ -814,6 +814,7 @@ body.loading .modal {
 .md-show {
     visibility: visible;
 }
+
 .md-overlay {
     background: none repeat scroll 0 0 rgba(29, 154, 189, 0.8);
     height: 100%;
@@ -830,6 +831,7 @@ body.loading .modal {
     opacity: 1;
     visibility: visible;
 }
+
 .md-content {
     background: none repeat scroll 0 0 #0D4757;
     border-radius: 3px 3px 3px 3px;
@@ -837,6 +839,11 @@ body.loading .modal {
     margin: 0 auto;
     position: relative;
 }
+
+#search_results ul li {
+	list-style: none !important;
+}
+
 .md-content h3 {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
     border-radius: 3px 3px 0 0;
@@ -863,6 +870,7 @@ body.loading .modal {
 }
 .md-content > div ul li {
     padding: 5px 0;
+	list-style: none;
 }
 .md-content button {
     display: block;
