Updated styles for avgrund alert

--- a/css/avgrund.css
+++ b/css/avgrund.css
@@ -114,3 +114,12 @@ body.avgrund-active {
 	top: 6px;
 	right: 10px;
 }
+
+
+.custom p {
+    font-size: 14px;
+    font-weight: 300;
+    margin: 30px 0 0;
+    padding: 10px 20px;
+    text-align: justify;
+}
