--- a/css/styles.css
+++ b/css/styles.css
@@ -778,7 +778,7 @@ input:focus{
     height:     100%;
     width:      100%;
     background: rgba( 255, 255, 255, .8 ) 
-                url('http://i.stack.imgur.com/FhHRx.gif') 
+                url('./images/loading4.gif')  
                 50% 50% 
                 no-repeat;
 }
